--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vladimir",
@@ -11,8 +12,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@types/express": "^4.17.14",
+    "@types/express-handlebars": "^6.0.0",
     "@types/node": "^18.11.9",
     "babel-loader": "^9.1.0",
+    "core-js": "^3.26.1",
     "gulp": "^4.0.2",
     "gulp-env": "^0.4.0",
     "gulp-nodemon": "^2.5.0",
