--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.14",
     "@types/express-handlebars": "^6.0.0",
     "@types/node": "^18.11.9",
+    "@types/uuid": "^9.0.0",
     "babel-loader": "^9.1.0",
     "core-js": "^3.26.1",
     "gulp": "^4.0.2",
@@ -28,9 +29,11 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "adm-zip": "^0.5.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   }
 }
