--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "file-sharing",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,8 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
+    "@types/adm-zip": "^0.5.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/express-handlebars": "^6.0.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
     "@types/uuid": "^9.0.0",
     "babel-loader": "^9.1.0",
@@ -25,10 +27,13 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "sass": "^1.56.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.3",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "@types/multer": "^1.4.7",
     "adm-zip": "^0.5.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
