--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,9 +3,10 @@
     "target": "es6",
     "module": "es6",
     "noImplicitAny": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": ["dom", "es2015", "es2018.promise"]
   },
   "include": [
-    "src/scripts/**/*.ts"
+    "scripts/**/*.ts"
   ]
 }
